更新用户管理部分

--- a/src/assets/style/theme/theme-base.scss
+++ b/src/assets/style/theme/theme-base.scss
@@ -279,7 +279,7 @@
             .sy-container-full {
               position: absolute;
               top: 0px;
-              right: 20px;
+              right: 0px; // 20px;
               bottom: 0px;
               left: 0px;
               display: flex;
