--- a/src/assets/style/theme/classic/setting.scss
+++ b/src/assets/style/theme/classic/setting.scss
@@ -6,7 +6,7 @@ $theme-bg-color: #ebf1f6;
 $theme-bg-mask: rgba(#000, .3);
 
 // container组件
-$theme-container-background-color: rgba(#FFF, .8);
+$theme-container-background-color: rgba(#FFF, 1);
 $theme-container-header-footer-background-color: #FFF;
 $theme-container-border-inner: 1px solid #cfd7e5;
 $theme-container-border-outer: 1px solid #cfd7e5;
