--- a/src/assets/style/theme/violet/setting.scss
+++ b/src/assets/style/theme/violet/setting.scss
@@ -6,7 +6,7 @@ $theme-bg-color: #000;
 $theme-bg-mask: rgba(#000, .3);
 
 // container组件
-$theme-container-background-color: rgba(#FFF,.8);
+$theme-container-background-color: rgba(#FFF, 1);
 $theme-container-header-footer-background-color: #FFF;
 $theme-container-border-inner: 1px solid $color-border-2;
 $theme-container-border-outer: 1px solid #8C40E2;
