--- a/src/assets/style/public-class.scss
+++ b/src/assets/style/public-class.scss
@@ -55,3 +55,12 @@ $sizes: (0, 5, 10, 15, 20);
 .#{$prefix}-pr { padding-right: 20px !important; }
 .#{$prefix}-pb { padding-bottom: 20px !important; }
 .#{$prefix}-pl { padding-left: 20px !important; }
+
+
+// 展示面板样式
+.dashboard-editor-container {
+  padding: 12px;
+  background-color: #f0f2f5;
+  position: relative;
+  height: calc(100% - 41px);
+}
