修改全局样式

--- a/src/assets/style/theme/classic/setting.scss
+++ b/src/assets/style/theme/classic/setting.scss
@@ -1,9 +1,9 @@
 // 主题名称
 $theme-name: 'classic';
 // 主题背景颜色
-$theme-bg-color: #ebf1f6;
+$theme-bg-color: #fff;
 // 主题背景图片遮罩
-$theme-bg-mask: rgba(#000, .3);
+$theme-bg-mask: #fff;
 
 // container组件
 $theme-container-background-color: rgba(#FFF, 1);
