--- a/src/assets/style/unit/color.scss
+++ b/src/assets/style/unit/color.scss
@@ -9,7 +9,7 @@ $color-danger: #F56C6C;
 
 // 文字
 $color-text-main: #303133;
-$color-text-normal: #fff;
+$color-text-normal: #606266;
 $color-text-sub: #909399;
 $color-text-placehoder: #C0C4CC;
 
