--- a/src/assets/style/public-class.scss
+++ b/src/assets/style/public-class.scss
@@ -60,7 +60,7 @@ $sizes: (0, 5, 10, 15, 20);
 // 展示面板样式
 .dashboard-editor-container {
   padding: 12px;
-  background-color: #f0f2f5;
+  background-color: #fff;
   position: relative;
-  height: calc(100% - 41px);
+  height: calc(100% - 40px);
 }
